--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@ function MM_swapImage() { //v3.0
         	<div data-role="collapsible" data-content-theme="false">
             	<h1> Sony Xperia XZ premium</h1>
             	<div>
-               	  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('sony','','imagenes/sony2.jpg',1)"><img src="imagenes/sony1.jpg" width="619" height="349" id="sony"></a> </div>
+               	  <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('sony','','imagenes/sony2.jpg',1)"><img src="imagenes/sony1.jpg" width="298" height="227" id="sony"></a> </p>
+               	  <p>&nbsp;</p>
+            	</div>
           </div>
                        <div data-role="collapsible" data-content-theme="false">
             	<h1> Moto Z</h1>
             	<div>
-               	  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('moto','','imagenes/moto2.jpg',1)"><img src="imagenes/moto1.jpg" width="463" height="445" id="moto"></a> </div>
+               	  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('moto','','imagenes/moto2.jpg',1)"><img src="imagenes/moto1.jpg" width="287" height="211" id="moto"></a> </div>
                        </div>
       </div>
                       <div>
@@ -257,22 +259,22 @@ function MM_swapImage() { //v3.0
                         	<div data-role="collapsible" data-content-theme="false">
             	<h1>Telcel</h1>
             	<div>
-               	  <img src="imagenes/telcel.jpg" width="225" height="225" alt="TELCEL"> </div>
+               	  <a href="http://www.telcel.com/" target="_self"><img src="imagenes/telcel.jpg" width="225" height="225" alt="TELCEL"></a> </div>
                        </div>
                        <div data-role="collapsible" data-content-theme="false">
             	<h1>Movistar</h1>
             	<div>
-               	  <img src="imagenes/movistar.png" width="311" height="162" alt="movistar"> </div>
+               	  <a href="https://www.movistar.com/es/" target="_self"><img src="imagenes/movistar.png" width="311" height="162" alt="movistar"></a> </div>
                        </div>
                        <div data-role="collapsible" data-content-theme="false">
             	<h1>Unefón</h1>
             	<div>
-               	  <img src="imagenes/unefon.jpg" width="387" height="177" alt="unefon"> </div>
+               	  <a href="https://www.unefon.com.mx/?gclid=CNu9g-bqjdMCFQUFaQod-ZYNcQ&gclsrc=aw.ds" target="_self"><img src="imagenes/unefon.jpg" width="301" height="177" alt="unefon"></a> </div>
                        </div>
                        <div data-role="collapsible" data-content-theme="false">
             	<h1>AT&amp;T</h1>
             	<div>
-               	  <img src="imagenes/at&t.png" width="309" height="279" alt="at&amp;t"> </div>
+               	  <a href="https://www.att.com.mx/" target="_self"><img src="imagenes/at&t.png" width="309" height="279" alt="at&amp;t"></a> </div>
                        </div>
                         </div>
                         
