--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	<title>Segunda Aplicacion</title>
+	<title>Segunda-Aplicacion</title>
 
 	<!--grupo CSS-->
     <link rel="stylesheet" href="css/app-2.min.css"/>
@@ -52,14 +52,14 @@ function MM_swapImage() { //v3.0
         	<div data-role="collapsible" data-content-theme="false">
             	<h1> Sony Xperia XZ premium</h1>
             	<div>
-               	  <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('sony','','imagenes/sony2.jpg',1)"><img src="imagenes/sony1.jpg" width="290" height="242" id="sony"></a> </p>
+               	  <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('sony','','imagenes/sony2.jpg',1)"><img src="imagenes/sony1.jpg" width="310" height="188" id="sony"></a> </p>
                	  <p>&nbsp;</p>
             	</div>
           </div>
                        <div data-role="collapsible" data-content-theme="false">
             	<h1> Moto Z</h1>
             	<div>
-               	  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('moto','','imagenes/moto2.jpg',1)"><img src="imagenes/moto1.jpg" width="287" height="211" id="moto"></a> </div>
+               	  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('moto','','imagenes/moto2.jpg',1)"><img src="imagenes/moto1.jpg" width="268" height="192" id="moto"></a> </div>
                        </div>
       </div>
                       <div>
